testsuite/tests/typecheck/should_fail/tcfail057.stderr

tcfail057.hs:5:7: error:
    • Constraint ‘RealFrac a’ used as a type
    • In the type signature:
        f :: (RealFrac a) -> a -> a
